Use non-fixed header on small screen sizes

--- a/content/assets/style/_base.scss
+++ b/content/assets/style/_base.scss
@@ -45,13 +45,6 @@ pre {
   word-wrap: break-word;
 }
 
-:target:before {
-  content: "";
-  display: block;
-  height: 106px;
-  margin: -106px 0 0;
-}
-
 /* LINKS */
 
 a {
